# rusty-nos

./: Cargo.toml
nos-common/: Cargo.toml
nos-common/src/: lib.rs  services.rs
nos-common/src/internal/: mod.rs  rib.rs
nos-control/components/bgp/: Cargo.toml
nos-control/components/bgp/src/: lib.rs
nos-control/components/ifmgr/: Cargo.toml
nos-control/components/ifmgr/src/: lib.rs
nos-control/components/ribmgr/: Cargo.toml
nos-control/components/ribmgr/src/: lib.rs
nos-control/launcher/: Cargo.toml
nos-control/launcher/src/: main.rs
