[package]
name = "nos-control"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"


nos-common = { path = "../../nos-common" }
comp-bgp = { path = "../components/bgp" }
comp-ribmgr = { path = "../components/ribmgr" }
# comp-ifmgr = { path = "../components/ifmgr" } # 暂时不用